--- a/wasm/login/Cargo.toml
+++ b/wasm/login/Cargo.toml
@@ -12,10 +12,11 @@ default = ["console_error_panic_hook", "wee_alloc"]
 
 [dependencies]
 wasm-bindgen = "0.2"
-web-sys = { version = "0.3", features = ["Document", "Window", "Location", "UrlSearchParams", "HtmlCollection", "Element", "DomTokenList", "History", "RequestInit", "HtmlInputElement", "HtmlButtonElement", "Headers", "console"]}
+web-sys = { version = "0.3", features = ["Document", "Window", "Location", "UrlSearchParams", "HtmlCollection", "Element", "DomTokenList", "History", "RequestInit", "HtmlInputElement", "HtmlButtonElement", "Headers", "Response", "console"]}
 js-sys = "0.3"
 serde = { version = "1.0", features = ["derive"] }
 serde-wasm-bindgen = "0.4"
+wasm-bindgen-futures = "0.4"
 
 # The `console_error_panic_hook` crate provides better debugging of panics by
 # logging them with `console.error`. This is great for development, but requires
